Add flake8 config

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,6 @@
 ;TRACKER=https://stats.openfisca.org
 ;TRACKER=https://openfisca.innocraft.cloud
 ;TRACKER=http://stats.data.gouv.fr/index.php?module=CoreHome&action=index&idSite=4&period=range&date=previous30#?module=Dashboard&action=embeddedIndex&idSite=4&period=range&date=previous30&idDashboard=1
-
-TRACKER=http://stats.data.gouv.fr/index.php?module=CoreHome&action=index&idSite=4&period=range&date=previous30
+;TRACKER=http://stats.data.gouv.fr/index.php?module=CoreHome&action=index&idSite=4&period=range&date=previous30
+;TRACKER=http://stats.data.gouv.fr/piwik.php
+TRACKER=http://stats.data.gouv.fr/piwik.php?module=CoreHome&idSite=4
