Update track() signature

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,6 +4,7 @@
 ;TRACKER=http://stats.data.gouv.fr/index.php?module=CoreHome&action=index&idSite=4&period=range&date=previous30
 ;TRACKER=http://stats.data.gouv.fr/piwik.php
 
+[piwik]
 TRACKER=https://openfisca.innocraft.cloud/piwik.php
 
 ;Piwik api version.
