Update test for PiwikTracker object
And improve flake8 happiness

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,6 @@ ignore = E128,E251,F405,E501, W503
 max-line-length = 120
 
 [nosetests]
-where = tracker/tests
+where = openfisca_tracker/tests
 exe = true
 with-doctest = true
