--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,8 @@ max-line-length = 120
 where = tests
 exe = true
 with-doctest = true
+
+[tool:pytest]
+addopts      = --showlocals --doctest-modules --disable-pytest-warnings
+testpaths    = tests
+python_files = **/*.py
