--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ hang-closing = true
 ;W503: We break lines before binary operators
 ignore = E128,E251,F405,E501,W503
 max-line-length = 120
+in-place = true
 
 [nosetests]
 where = tests
