--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,12 @@
-[flake8]
-hang-closing = true
-;E128 continuation line under-indented for visual indent
-;E251: We prefer `function(x = 1)` over `function(x=1)`
-;E501: We do not enforce a maximum line length
-;W503: We break lines before binary operators
-ignore = E128,E251,F405,E501,W503
-max-line-length = 120
-in-place = true
+; E128/133:         We prefer hang-closing visual indents
+; E251:             We prefer `function(x = 1)` over `function(x=1)`
+; W503/4:           We break lines before binary operators (Knuth's style)
 
-[nosetests]
-where = tests
-exe = true
-with-doctest = true
+[flake8]
+hang-closing        = true
+ignore              = E128,E251,W503
+in-place            = true
+no-accept-encodings = true
 
 [tool:pytest]
 addopts      = --showlocals --doctest-modules --disable-pytest-warnings
