Do not filter pytest warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ in-place            = true
 no-accept-encodings = true
 
 [tool:pytest]
-addopts      = --showlocals --doctest-modules --disable-pytest-warnings
-testpaths    = tests
-python_files = **/*.py
+addopts             = --showlocals --exitfirst --doctest-modules
+testpaths           = tests
+python_files        = **/*.py
+filterwarnings      = ignore::DeprecationWarning
