--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,14 @@
+; D107:             We do not document __init__ method
 ; E128/133:         We prefer hang-closing visual indents
 ; E251:             We prefer `function(x = 1)` over `function(x=1)`
 ; W503/4:           We break lines before binary operators (Knuth's style)
 
 [flake8]
 hang-closing        = true
-ignore              = E128,E251,W503
+ignore              = D107,E128,E251,W503
 in-place            = true
+inline-quotes       = "
+multiline-quotes    = """
 no-accept-encodings = true
 
 [tool:pytest]
