--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,25 @@
-; D107:             We do not document __init__ method
-; E128/133:         We prefer hang-closing visual indents
-; E251:             We prefer `function(x = 1)` over `function(x=1)`
-; W503/4:           We break lines before binary operators (Knuth's style)
+; D107:                  We do not document __init__ method
+; E128/133:              We prefer hang-closing visual indents
+; E251:                  We prefer `function(x = 1)` over `function(x=1)`
+; W503/4:                We break lines before binary operators (Knuth's style)
 
 [flake8]
-hang-closing        = true
-ignore              = D107,E128,E251,W503
-in-place            = true
-inline-quotes       = "
-multiline-quotes    = """
-no-accept-encodings = true
+hang-closing             = true
+ignore                   = D107,E128,E251,W503
+in-place                 = true
+inline-quotes            = "
+multiline-quotes         = """
+no-accept-encodings      = true
+application-import-names = openfisca_tracker
+
+; W1203:                 We prefer to log with f-strings
+
+[pylint.message_control]
+disable                  = W1203
+score                    = no
 
 [tool:pytest]
-addopts             = --showlocals --exitfirst --doctest-modules
-testpaths           = tests
-python_files        = **/*.py
-filterwarnings      = ignore::DeprecationWarning
+addopts                  = --showlocals --exitfirst --doctest-modules
+testpaths                = tests
+python_files             = **/*.py
+filterwarnings           = ignore::DeprecationWarning
