--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ ignore                   = D107,E128,E251,W503
 in-place                 = true
 inline-quotes            = "
 multiline-quotes         = """
+import-order-style       = appnexus
 no-accept-encodings      = true
 application-import-names = openfisca_tracker
 
